uiPrac.css
.dashboard { background-color: rgba(20, 121, 255, 0.1); }
.shift { background-color: rgba(20, 121, 255, 0.2); }
.act { background-color:white; }
.dash-title {font-weight: bold;}
.secondary {font-weight: bold;}
.no-ptr {pointer-events: none;}
.hide {display: none;}
.flex-container{
    padding: 0;
    margin: 0;
    list-style: none;

    -ms-box-orient: horizontal;
    display: -webkit-box;
    display: -moz-box;
    display: -ms-flexbox;
    display: -moz-flex;
    display: -webkit-flex;
    display: flex;

    -webkit-justify-content: space-around;
    justify-content: space-around;
    -webkit-flex-flow: row wrap;
    flex-flow: row-wrap;
    -webkit-align-items: stretch;
    align-items: stretch;
}

.flex-item:nth-of-type(1){ flex-grow: 1;}
.flex-item:nth-of-type(2){ flex-grow: 1;}
.flex-item:nth-of-type(3){ flex-grow: 1;}
.flex-item:nth-of-type(4){ flex-grow: 1;}
.flex-item:nth-of-type(5){ flex-grow: 1;}

.flex-item {
    line-height: 50px;
    margin: 1%;
}

/* Works on Firefox */
#reportsModalBody {
    scrollbar-width: thin;
    scrollbar-color:rgba(20, 121, 255, 0.2) rgb(228, 235, 236);
  }
  
  /* Works on Chrome, Edge, and Safari */
  #reportsModalBody::-webkit-scrollbar {
    width: 12px;
  }
  
  #reportsModalBody::-webkit-scrollbar-track {
    background: rgb(228, 235, 236);
  }
  
  #reportsModalBody::-webkit-scrollbar-thumb {
    background-color: rgba(20, 121, 255, 0.2);
    border-radius: 20px;
    border: 3px solid rgb(228, 235, 236);
  }

/* Hide scrollbar for Chrome, Safari and Opera */
.sched-container::-webkit-scrollbar {
    display: none;
  }
  
  /* Hide scrollbar for IE, Edge and Firefox */
  .sched-container {
    -ms-overflow-style: none;  /* IE and Edge */
    scrollbar-width: none;  /* Firefox */
  }

.sched-item-icon {
    color: grey;
    margin: 1%;
    width: 10%;
}
.sched-item-content {
    color: grey;
    margin: 1%;
    width: 50%;
}
.sched-item {
    color: grey;
    margin: 1%;
}
.start-shift {
    color: grey;
    margin: 1%;
}

.report-menu {
    margin: 1%;
}

.report-item {
    margin: 1%;
}

.report-menu:nth-of-type(1){ flex-grow: 1;}
.report-menu:nth-of-type(2){ flex-grow: 1;}

.report-item:nth-of-type(1){ flex-grow: 1;}
.report-item:nth-of-type(2){ flex-grow: 1;}

.report-item1:nth-of-type(1){ flex-grow: 1;}
.report-item1:nth-of-type(2){ flex-grow: 8; font-weight: bold; text-align: left;}

.direction{
    border-radius: 50%;
    border: none;
    outline: 0 !important;
    background-color: rgba(0, 0, 255, 0.2);
}
#prev{
    position: absolute;
    left: 5px;
    bottom: 250px;
    font-weight: bolder;
    font-size: 20px;
}
#next{
    position: absolute;
    right: 5px;
    bottom: 250px;
    font-weight: bolder;
    font-size: 20px;
}

.alert-off {
    display: none;
}

@keyframes fadeIn {
    0% {opacity: 0;}
    100% {opacity: 1;}
}

@keyframes fadeOut {
    0% {opacity: 1; display: inline;}
    100% {opacity: 0;}
}
.alert-item{
    z-index: 1;
    position: fixed;
    transform: translateY(-50%);
    display: inline;
    height: 50px;
    width: 200px;
    justify-content: center;
    align-items: center;
    text-align: center;
    top: 50%;
    left: 50%;
    border-radius: 5%;
}
.reminder-item{
    z-index: 1;
    position: fixed;
    transform: translateY(-50%);
    display: inline;
    height: 50px;
    width: 400px;
    justify-content: center;
    align-items: center;
    text-align: center;
    top: 6%;
    left: 35%;
}
.fade-out{
    -webkit-animation-duration: 2s;
    animation-duration: 2s;
    -webkit-animation-name: fadeOut;
    animation-name: fadeOut;
}
.fade-in{
    -webkit-animation-duration: 1s;
    animation-duration: 1s;
    -webkit-animation-name: fadeIn;
    animation-name: fadeIn;
}
.fadeOutSuccess{
    color: #3c763d;
    background-color: #dff0d8;
    border-color: #d6e9c6;
}
.fadeOutWarning{
    color: #8a6d3b;
    background-color: #fcf8e3;
    border-color: #faebcc;
}
.fadeOutFailure{
    color: #a94442;
    background-color: #f2dede;
    border-color: #ebccd1;
}
.fadeOutReminder{
  color: #3c763d;
  /* background-color: #dff0d8; */
  background-color: rgba(103, 194, 106, 0.2);
  border: solid;
  border-color: grey;
  border-radius: 10px;
  border-width: 1px;
}

.fadeInSuccess{
    color: #3c763d;
    background-color: #dff0d8;
    border-color: #d6e9c6;
}
.fadeInWarning{
    color: #8a6d3b;
    background-color: #fcf8e3;
    border-color: #faebcc;
}
.fadeInFailure{
    color: #a94442;
    background-color: #f2dede;
    border-color: #ebccd1;
}
.fadeInReminder{
  color: #3c763d;
  background-color: rgba(103, 194, 106, 0.2);
  border:black;
  border: solid;
  border-color: grey;
  border-radius: 10px;
  border-width: 1px;
}
.centerAlert{
    padding: 12px;
}

/* calendar */
.calendar {
    width: 100%;
    height: 90%;
    background-color: #222227;
    box-shadow: 0 0.5rem 3rem rgba(0, 0, 0, 0.4);
    color: #d6e9c6;
  }
  
  .month {
    width: 100%;
    height: 4rem;
    background-color: #167e56;
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 0 2rem;
    text-align: center;
    text-shadow: 0 0.3rem 0.5rem rgba(0, 0, 0, 0.5);
  }
  
  .month i {
    font-size: 16px;
    cursor: pointer;
    margin-bottom: 10px;
  }
  
  .month h1 {
    font-size: 14px;
    font-weight: 400;
    text-transform: uppercase;
  }
  
  .month p {
    font-size: 12px;
  }
  
  .weekdays {
    width: 100%;
    height: 2rem;
    padding: 0 0.4rem;
    display: flex;
    align-items: center;
  }
  
  .weekdays div {
    font-size: 12px;
    font-weight: 400;
    letter-spacing: 1rem;
    width: calc(100% / 7);
    display: flex;
    justify-content: center;
    align-items: center;
    text-shadow: 0 0.3rem 0.5rem rgba(0, 0, 0, 0.5);
  }
  
  .days {
    width: 98%;
    display: flex;
    flex-wrap: wrap;
  }
  
  .days div {
    font-size: 12px;
    
    width: calc(96% / 7);
    height: 1.5rem;
    display: flex;
    justify-content: center;
    align-items: center;
    text-shadow: 0 0.3rem 0.5rem rgba(0, 0, 0, 0.5);
    transition: background-color 0.2s;
  }
  
  .days div:hover:not(.today) {
    background-color: #262626;
    border: 0.2rem solid #777;
    cursor: pointer;
  }
  
  .prev-date,
  .next-date {
    opacity: 0.5;
  }
  
  .today {
    background-color: #167e56;
  }

  #exampleModalLongTitle{
      text-transform: capitalize;
  }

@media only screen and (max-width: 768px) {
    /* For mobile phones: */
    .fadeInSuccess{
        color: #3c763d;
        background-color: #dff0d8;
        border-color: #d6e9c6;
        left: 22%;
    }
    .fadeInWarning{
        color: #8a6d3b;
        background-color: #fcf8e3;
        border-color: #faebcc;
        left: 22%;
    }
    .fadeInFailure{
        color: #a94442;
        background-color: #f2dede;
        border-color: #ebccd1;
        left: 22%;
    }
    .fadeOutSuccess{
        color: #3c763d;
        background-color: #dff0d8;
        border-color: #d6e9c6;
        left: 22%;
    }
    .fadeOutWarning{
        color: #8a6d3b;
        background-color: #fcf8e3;
        border-color: #faebcc;
        left: 22%;
    }
    .fadeOutFailure{
        color: #a94442;
        background-color: #f2dede;
        border-color: #ebccd1;
        left: 22%;
    }
    .reminder-item{
      z-index: 1;
      position: fixed;
      transform: translateY(-50%);
      display: inline;
      height: 50px;
      width: 300px;
      justify-content: center;
      align-items: center;
      text-align: center;
      top: 4%;
      left: 10%;
  }
    #prev{
        position: absolute;
        left: 3px;
        bottom: 380px;
    }
    #next{
        position: absolute;
        right: 3px;
        bottom: 380px;
    }        
}

